Fixed footer spacing on lesson 2

--- a/level4-C/lesson-02/main.scss
+++ b/level4-C/lesson-02/main.scss
@@ -228,7 +228,7 @@ body {
     position: absolute;
     width: 240px;
     text-align: left;
-    bottom: 43px;
+    bottom: 36px;
     right: 6.2%;
     font-family: $title-font;
   }
